syntax = "proto3";

option go_package = "github.com/hi20160616/fetcher_web/api/fetcher_web/v1";

import "google/protobuf/timestamp.proto";

package fetcher_web.v1;

service NewsFetcher{
  rpc ListArticles(ListArticlesRequest) returns (ListArticlesResponse){}
  rpc GetArticle(GetArticleRequest) returns (GetArticleResponse){}
  rpc SearchArticles(SearchArticlesRequest) returns (SearchArticlesResponse){}
}

message ListArticlesRequest{
  string id = 1;
  string domain = 2;
}

message ListArticlesResponse{
  Articles articles = 1;
}

message GetArticleRequest {
  string id = 1;	
}

message GetArticleResponse {
  Article article = 1;
}

message SearchArticlesRequest{
  string keyword = 1;
}

message SearchArticlesResponse{
  Articles articles = 1;
}

message Article{
  string id = 1;
  string title = 2;
  string content = 3;
  google.protobuf.Timestamp update_time = 4;
  string website_id = 5;
  string website_title = 6;
}

message Articles{
  repeated Article articles = 1;
}
